--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
 .App {
+  text-align: center;
+}
+
+.center {
   text-align: center;
 }
